@@ -1,0 +1,13 @@
+module.exports = inlineHeaders;
+
+var querystring = require('querystring');
+
+function inlineHeaders(url, headers) {
+  if (/\?/.test(url)) {
+    url += '&';
+  } else {
+    url += '?';
+  }
+
+  return url + querystring.encode(headers);
+}
