@@ -62,8 +62,8 @@ if (!browser.msie || parseFloat(browser.version) > 8) {
 
           t.deepEqual(
             requestURL.query, {
-              'X-Algolia-API-Key': 'ROCKSSuccess',
-              'X-Algolia-Application-Id': 'AngularJSSuccess'
+              'x-algolia-api-key': 'ROCKSSuccess',
+              'x-algolia-application-id': 'AngularJSSuccess'
             },
             'requestURL query matches'
           );
